--- a/Proyecto-Catedra-DAW/productos.html
+++ b/Proyecto-Catedra-DAW/productos.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img/gatosiosi.jpg" type="image/x-icon">
+    <link rel="icon" href="img/logo.jpg" type="image/x-icon">
     <title>Productos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/productos.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 </head>
 <body>
-    <!--<header>
+    <header>
         <div class="menu container">
             <img class="logo-1" src="img/logo.jpg" alt="">
             <input type="checkbox" id="menu" />
@@ -29,7 +29,7 @@
                 <button class="btn-1">Iniciar Sesión</button>
             </nav>
         </div>
-    </header>-->
+    </header>
     <div class="container">
         <div class="row">
             <div class="col-12">
@@ -40,7 +40,7 @@
             <div class="col-12">
                 <form action="javascript:void(0)" name="frmproduct" id="frmproduct" class="col s12">
 
-                    <div class="row">
+                    <div class="row2">
                         <div class="col-12">
                             <div class="form-group">
                                 <input type="text" id="txtBusqueda" class="form-control" placeholder="Nombre del producto">
@@ -53,18 +53,22 @@
         </div>
         <br>
         
+        <button class="btn-2" id="btnDescargar">Descargar datos</button>
         <div id="list" class="row">
             <hr>
             <h1 id = "lista" class="text-center">Lista de Productos</h1>
-            <table class="table table-hover">
+            <table class="table table-hover" id="datostable">
                 <thead>
                     <tr>
-                        <th>ID del Procucto</th>
-                        <th>Nombre del producto</th>
-                        <th>Precio unitario</th>
-                        <th>Cantidad vendida</th>
+                        <th>ID</th>
+                        <th>Nombre</th>
                         <th>Descripción</th>
                         <th>Categoría</th>
+                        <th>Precio</th>
+                        <th>Producto</th>
+                        <th>Calificación</th>
+                        <th></th>
+                        <th>Cantidad vendida</th>
                     </tr>
                 </thead>
                 <tbody id="productlist">
@@ -72,6 +76,15 @@
             </table>
         </div>
     </div>
+    <footer>
+        <p>¡La bodeguita SA de CV, venga y gaste su dinero aquí!</p>
+    </footer>
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.5/xlsx.full.min.js"></script>
 <script src="js/productos.js"></script>
 </html>
+
+
+
+
+//Pipio
